--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OBAID SHAIKH | Professional Portfolio & Social Links</title>
+    <title>OBAID SHAIKH | Social Links</title>
     
     <!-- PWA Manifest -->
     <link rel="manifest" href="manifest.json">
